saving to be sure

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <div class="main-one">
       <div class="header">
         <span class="header-logo">Header Logo</span>
-        <span>header link one</span>
-        <span>header link two</span>
-        <span>header link three</span>
+        <div class="links">
+          <span>header link one</span>
+          <span>header link two</span>
+          <span>header link three</span>
+        </div>
       </div>
       <div class="content-one">
         <div class="content-one-left">
@@ -31,7 +33,8 @@
           </div>
           <div class="button">Sign up</div>
         </div>
-        <div class="content-one-ight">
+        <div class="content-one-right">
+          this is a placeholder for an image
           <!-- here goes the image -->
         </div>
       </div>
@@ -60,20 +63,24 @@
     </div>
 
     <div class="content-three">
-      <p>
-        This is an inspiring quote, or a testimonial form a customer. MAybe it's
-        just filling up space, or maybe people will actually read it. Who knows?
-        All I know is that it looks nice.
-      </p>
-      <p>-Thor, God of Thunder</p>
+      <div class="container-three">
+        <p>
+          This is an inspiring quote, or a testimonial form a customer. MAybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </p>
+        <p>-Thor, God of Thunder</p>
+      </div>
     </div>
 
     <div class="content-four">
-      <div>
-        Call to action! It's time!<br />Sign up for our product by clicking that
-        button right over there!
+      <div class="container-four">
+        <div>
+          <b>Call to action! It's time!</b><br />Sign up for our product by
+          clicking that button right over there!
+        </div>
+        <div><b></b>Sign up</b>/div>
       </div>
-      <div>Sign up</div>
     </div>
   </body>
 </html>
