--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
           <b>Call to action! It's time!</b><br />Sign up for our product by
           clicking that button right over there!
         </div>
-        <div><b></b>Sign up</b>/div>
+        <div><b>Sign up</b></div>
       </div>
     </div>
+
+    <footer>Copyright © The Odin Project 2021</footer>
   </body>
 </html>
